# Landuse_Zhong

./: .gitignore  0 AAA需求文档.md  0.0 PV_dataset.ipynb  1.0 xarray.ipynb  2.1 process_csv_for_aligning.ipynb  2.2 process_csv_for_embedding.ipynb  2.3 process_csv_for_prediction.ipynb  3.0 pre-training.ipynb  4.1 Emission_reduction_potential.ipynb  6.1 EDA_data.ipynb  6.2 Figure1_Policy_Suitability_Map.ipynb  6.3 Figure2_Emission.ipynb  6.4 Figure0_economic_feasibility.ipynb  6.4 Figure4_economic_feasibility.html  6.4 Figure4_economic_feasibility.ipynb  6.5 Figure2_priority_total.ipynb  6.5 Figure5_PPT_plot.ipynb  6.5 Figure5_final_analysis.ipynb  6.6 Figure1_Enviromental_plot.ipynb  6.7 Figure2_Policy_matrix.ipynb  6.8 Figure3_Carbon_LNCS.ipynb  6.9 Figure4_Cumulative_pirority.ipynb  7.0 Analysis_Nation_level.ipynb  7.0 Figure5_final_analysis.ipynb  7.1 Analysis_State_level.ipynb  7.3 Appendix_figure.ipynb  8.0 Multi-objective.ipynb  9.0 Energy_demand_adjust.ipynb  AGENTS.md  BUGFIX_UNICODE_ESCAPE.md  DATA_INTERFACE_SUMMARY.md  Download_data.ipynb  LICENSE  MULTI_OBJECTIVE_SUMMARY.md  PIPELINE_VISUALIZATION.md  PROJECT_REFACTOR_SUMMARY.md  PROJECT_STRUCTURE_SUMMARY.md  Process.ipynb  QUICK_START_GUIDE.md  README.md  (+31 more)
Supplymentary/: S1_Machine _learning.ipynb  S2_LNCS_carbon.ipynb  S3_Sentivity_anlysis.ipynb  S4_State_cumulative.ipynb  S5_Economic_plot.ipynb  S6_Statistic_inference.ipynb
_backup_originals_20250809_214011/: paper.md
cloud/: README_cloud.md  submit_job.py
configs/: global.yaml
docs/: 0 AAA0710汇报文档.md  0 AAA需求文档.html  0 AAA需求文档.md  AGENT_RUNBOOK.md  DATA_DEPENDENCIES.md  GPU_BAYESIAN_SETUP_SUMMARY.md  Global_pipline.md  HOW_TO_USE_BAYES_GPU_KERNEL.md  MIGRATION_MAP.md  README.md  SAVE_MODEL_PARAMS.md  数据接口与数据流文档.md
function/: Cloudrain.py  __init__.py  data_utils.py  evaluation.py  global_varibles.py  gmm_training.py  haxgrid.py  lat_aggrline.py  learning_curve.py  load_all_ds.py  load_ds.py  load_pv.py  model_building.py  model_diagnostics.py  model_saving.py  negative_sampling.py  pipeline.py  stage1KDE.py  stage2classifier.py  toutils.py  training.py
scripts/: 01_Feature_engineering.ipynb  01_Feature_loading.ipynb  01_Feature_time.ipynb
(+46 files in other folders)
