[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landuse-pipeline"
version = "1.0.0"
description = "Global Pipeline for PV Deployment Suitability Analysis on Abandoned Cropland"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Pengyu Zhong", email = "your.email@example.com"}
]
keywords = ["photovoltaic", "land use", "machine learning", "sustainability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "xarray>=2022.3.0",
    "dask[complete]>=2022.1.0",
    "netCDF4>=1.5.7",
    "rasterio>=1.2.0",
    "geopandas>=0.10.0",
    "scikit-learn>=1.0.0",
    "tensorflow>=2.11.0",
    "google-cloud-storage>=2.0.0",
    "PyYAML>=6.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
cloud = [
    "google-cloud-storage>=2.0.0",
    "gcsfs>=2022.1.0",
]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/landuse-pipeline"
Documentation = "https://github.com/yourusername/landuse-pipeline/docs"
Repository = "https://github.com/yourusername/landuse-pipeline"

[tool.setuptools]
packages = ["landuse"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
